# fastapi_simple_template

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint_format_test.yml
src/: hoge.py
src/fastapi_simple_template/: container.py  gunicorn.conf.py  main.py  routers.py  schemas.py  services.py
tests/: conftest.py  test_main.py  test_routers.py
