[tool.poetry]
name = "fastapi-simple-template"
version = "2023.01.21.0"
description = "This project is a simple fastapi webserver template."
authors = ["ryo.ishii <ryoishii1101@gmail.com>"]
packages = [{include = "fastapi_simple_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {version = "^0.20.0", extras = ["standard"]}
gunicorn = "^20.1.0"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pre-commit = "^2.21.0"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests/"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
